kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-devops-python-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-devops-python
  template:
    metadata:
      labels:
        app: demo-devops-python
    spec:
      containers:
      - name: demo-devops-python-container
        image: trucco10/demo-devops-python:v0.2
        ports:
        - containerPort: 8000
