kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-devops-service
spec:
  selector:
    app: demo-devops-python
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
